crates/dbdict-cli/tests/snapshots/cli__validate_data_rich_reports_d01_d02_and_d03.snap
---
source: crates/dbdict-cli/tests/cli.rs
assertion_line: 365
expression: "sanitize(&stderr, &dict.display().to_string())"
---
error: [D01] A required column must not contain nulls.
  --> <fixture>:14:23
   |
 7 |   - name: trades
...
12 |       - name: qty
13 |         type: BIGINT
14 |         constraints: [required]
   |                       ^^^^^^^^ has 1 null value
error: [D02] A primary key must be unique across rows.
 --> <fixture>:9:15
  |
7 |   - name: trades
8 |     columns:
9 |       - name: id
  |               ^^ has 1 duplicated key value
error: [D03] A unique column must not contain duplicate values.
  --> <fixture>:17:23
   |
 7 |   - name: trades
...
15 |       - name: ref
16 |         type: VARCHAR
17 |         constraints: [unique]
   |                       ^^^^^^ has 1 duplicated value
